# pokemon-sim

./: .gitignore  Battle.cpp  Battle.h  CMakeLists.txt  Config.h  Field.cpp  Field.h  LICENSE  Move.cpp  Move.h  Natures.cpp  Natures.h  Player_Config.h  Players.h  Pokemon.cpp  Pokemon.h  README.md  STATE_MACHINE  Stats.h  TODO  Type.cpp  Type.h  generate_coverage_report  loadJSON.cpp  loadJSON.h  main.cpp  main_stripped.cpp  poke.py  team_choice.json
Battle/: Battle.cpp  Battle.h  BattleActor.cpp  BattleActor.h  BattleConfig.h  BattleMessage.cpp  BattleMessage.h  BattleStateMachine.cpp  BattleStateMachine.h  Field.cpp  Field.h  FieldObjects.cpp  FieldObjects.h  FieldPositions.cpp  FieldPositions.h  Field_Objects.cpp  Field_Objects.h  Field_Positions.cpp  Field_Positions.h  Party.cpp  Party.h  Players.h  Targeting.cpp  Targeting.h
Battle/unit-tests/: probability-helpers.cpp  probability-helpers.h  test-Battle.cpp  test-BattleActor.cpp  test-BattleStateMachine.cpp  test-Field.cpp  test-Targeting.cpp
Moves/: Air_Slash.json  Calm_Mind.json  Confusion.json  Crunch.json  Dark_Pulse.json  Dazzling_Gleam.json  Double_Iron_Bash.json  Draco_Meteor.json  Dragon_Claw.json  Dragon_Dance.json  Dragon_Tail.json  Earthquake.json  Extreme_Speed.json  Fake_Out.json  Fire_Blast.json  Fire_Fang.json  Fire_Punch.json  Flamethrower.json  Gyro_Ball.json  Iron_Head.json  Leech_Seed.json  Nasty_Plot.json  Protect.json  Psychic.json  Recover.json  Rest.json  Roar.json  Rock_Slide.json  Roost.json  Sappy_Seed.json  Scald.json  Seismic_Toss.json  Shadow_Ball.json  Sizzly_Slide.json  Sludge_Bomb.json  Sludge_Wave.json  Soft-Boiled.json  Spikes.json  Stealth_Rocks.json  Sticky_Web.json  (+10 more)
Moves/Unit-Test/: Test_Move_1.json  Test_Move_No_Move_Power.json
Moves/game_moves/: Struggle.json
Moves/status_moves/: Confusion.json
Pokemon/: Effect.cpp  Effect.h  Move.cpp  Move.h  Natures.cpp  Natures.h  Pokemon.cpp  Pokemon.h  Stats.cpp  Stats.h  Status.cpp  Status.h  Type.cpp  Type.h
Pokemon/unit-tests/: test-Natures.cpp  test-Type.cpp  test-main.cpp
Utils/: Logging.h
db/: README.md
db/app/: docker-compose.yml
db/app/api/: .gitignore  Dockerfile  package-lock.json  package.json  server.js
db/app/api/models/: MoveModel.js  PokemonModel.js
db/app/api/routes/: Moves.js  Pokemon.js  TestAPIConnect.js  TestDBConnect.js
db/app/client/: Dockerfile  package-lock.json  package.json
db/app/client/public/: index.html
db/app/client/src/: App.js  Home.js  Menu.js  Moves.js  NotFound.js  Pokemon.js  Teams.js
db/app/db/pokemon/: pokemon.metadata.json
db/db/pokemon/: moves.bson  moves.metadata.json  pokemon.bson  pokemon.metadata.json
db/db/showdown/: abilities.bson  abilities.metadata.json  moves.bson  moves.metadata.json  pokedex.bson  pokedex.metadata.json
db/showdown/: parse.sh  parser.py
fileIO/: loadJSON.cpp  loadJSON.h
species/: Aerodactyl.json  Aggron.json  Alakazam-Mega.json  Alakazam.json  Alolan_Muk.json  Blissey.json  Dragalge.json  Dragonite.json  Eevee-Starter.json  Eevee.json  Ferrothorn.json  Garchomp.json  Gengar.json  Hydreigon.json  Melmetal.json  Mew.json  Rhydon.json  Togekiss.json
species/unit-test/: Testemon.json
teams/: LGPE_team1.json  LGPE_team_TEST.json  stall.json  team1.json  team2.json  team_alakazam.json  team_burn.json  team_dragonite.json  team_garchomp.json  team_uturn.json
teams/unit-test/: test-team-speed-tie.json  test-team1.json  test-team2.json
